Fixed issue with overseas radio button group not allocating to newAttendeeData object.

--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -69,7 +69,7 @@
           <label class="control-label"><input name="overseas" type="radio" ng-model="newAttendeeData.overseas" value="true"></input> Yes I am!</label>
         </div>
         <div class="radio sqnInput">
-          <label class="control-label"><input ng-model="overseas" value="false" name="overseas" type="radio" ng-required="true"></input>No, I live in New Zealand</label>
+          <label class="control-label"><input ng-model="newAttendeeData.overseas" value="false" name="overseas" type="radio" ng-required="true"></input>No, I live in New Zealand</label>
         </div>
       </div>
       <div ng-show="showEvents" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
