Can only submit form when all fields are valid. Now working on final check for events.

--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="col-xxs-12 col-xs-12 col-md-12 col-lg-12">
-        <input class="sqn-btn-positive sqn-btn-large" type="submit" value="Register"></input>
+        <input class="sqn-btn-positive sqn-btn-large" type="submit" value="Register" ng-show="register.$valid" ng-disabled="register.$invalid"></input>
       </div>
     </form>
   </div>
