Moved the registering with an external provider to directive.

--- a/browser/js/referredNewAttendee/referredNewAttendee.html
+++ b/browser/js/referredNewAttendee/referredNewAttendee.html
@@ -1,32 +1,1 @@
-<section id="referredNewAttendee">
-    <h3>Sorry, looks like you haven't registered yet, get started below.</h3>
-    <form id="referredRegisterForm" name="referredRegister" ng-submit="createNewUserFromReferral()">
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
-        <h4>It'd be great to have you! How do you know us?</h4>
-        <div ng-repeat="cat in categories" class="radio">
-          <label class="control-label"> <input event-limit-check type="radio" name="association" ng-model="newAttendeeData.association" value="{{ cat.$id }}">{{ cat.$value }}</label>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
-        <h3>Are you travelling from overseas to attend?</h3>
-          <div class="radio">
-            <label class="control-label"><input name="overseas" type="radio" ng-model="newAttendeeData.overseas" value="true"></input> Yes I am!</label>
-          </div>
-          <div class="radio">
-            <label class="control-label" ng-model="overseas" value="false"><input name="overseas" type="radio"></input>No, I live in New Zealand</label>
-          </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
-        <h3>What events are you planning to attend?</h3>
-        <div class="checkbox">
-          <div ng-repeat="evt in events">
-            <label>
-            <input type="checkbox" ng-model="newAttendeeData.events[evt.$id]" value="{{ evt.$id }}" ng-true-value="true"  ng-false-value="false" ng-disabled="evt['available'] === false"></input>{{ evt.name }}</label><span ng-show="evt['available'] === false">No more tickets</span>
-        </div>
-      <div>
-
-        <input type="submit" value="Register"></input>
-      </div>
-    </form>
-
-</section>
+<new-attendee-external-form events="events" categories="categories"></new-attendee-external-form>
