--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -1,7 +1,4 @@
 <section id="registerNewAttendee" class="container">
-  <div class="row">
-    <span ng-show="error" class="warn">{{ error }}</span>
-  </div>
   <h2 ng-show="processingData">Creating new user...</h2>
   <h3 ng-hide="registerMethodChosen !== null">How would you like to register?</h3>
   <div ng-show="registerMethodChosen" class="register-option-complete flex-container-row">
@@ -21,5 +18,9 @@
       G+
     </div> -->
   </div>
-  <div ng-hide="registerMethodChosen === null"ui-view></div>
+  <div class="info-banner" ng-show="registerMethodChosen === null">
+    <p>Registering will allow you to login and monitor any announcements regarding the event.</p>
+    <p>It will also allow you to add any guests coming to the events, change your attendance status if plans change, and more.</p>
+  </div>
+  <div ng-hide="registerMethodChosen === null" ui-view></div>
 </section>
