Working on styling events within the attendee state view.

--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -2,9 +2,10 @@
 
   <h2>Hi {{ user.firstName }}</h2>
 
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <p>{{ userCat }}</p>
       <h3>Anniversary Events </h3>
       <attendee-event ng-repeat="event in events" evt="event" attendee="user"></attendee-event>
-
+    </div>
+    <div class="cols-xs-12 col-sm-6 col-md-6 col-lg-6"></div>
 </section>
