--- a/browser/js/common/directives/attendee-event/attendee-event.html
+++ b/browser/js/common/directives/attendee-event/attendee-event.html
@@ -1,14 +1,14 @@
-<h3>{{ evt.name }}</h3>
-<div class="attend-event" ng-show="!attending">
-  <button class="sqn-btn-positive" ng-disabled="!available" ng-click="attendEvent(evt.$id)"> Register for Event</button>
+<div class="flex-container-row"  ng-class="{'status-attending': attending, 'status-not-attending': !attending }">
+  <h3>{{ evt.name }}</h3>
+  <div class="attend-event" ng-show="!attending">
+    <button class="sqn-btn-positive" ng-disabled="!available" ng-click="attendEvent(evt.$id)"> Register for Event</button>
+  </div>
+  <div ng-show="attending" class="attending-options">
+    <button class="sqn-btn" ng-show="available" ng-click="addGuest()">Bring guest</button>
+    <button class="sqn-btn-danger" ng-click="removeFromEvent(evt.$id)">Cancel Attendance</button>
+  </div>
 </div>
-<div ng-show="attending" class="attending-options">
-  <button class="sqn-btn" ng-show="available">Bringing guests?</button>
-  <button class="sqn-btn-danger" ng-click="removeFromEvent(evt.$id)">Cancel Attendance</button>
-  <section class="attendee-aeg">
-    <!-- <div> -->
-
-      <event-guest ng-repeat="guest in guests" attendee="attendee" guest="guest" evtid="{{evt.$id}}"></event-guest>
-      <add-event-guest attendee="attendee" evt="evt" available="available"></add-event-guest>
-  </section>
-</div>
+<section class="attendee-aeg">
+    <event-guest ng-repeat="guest in guests" attendee="attendee" guest="guest" evtid="{{evt.$id}}"></event-guest>
+    <add-event-guest ng-show="viewAddGuestForm" attendee="attendee" evt="evt" available="available"></add-event-guest>
+</section>
