--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -1,11 +1,10 @@
-<section id="user-profile">
-
-  <h2>Hi {{ user.firstName }}</h2>
-
+<section id="user-profile" class="container-fluid">
+  <div class="row">
+    <h2>Hi {{ user.firstName }}</h2>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <p>{{ userCat }}</p>
       <h3>Anniversary Events </h3>
       <attendee-event ng-repeat="event in events" evt="event" attendee="user"></attendee-event>
     </div>
-    <div class="cols-xs-12 col-sm-6 col-md-6 col-lg-6"></div>
+  </div>
 </section>
