Working ng-cloak for transitioning elements. Completed add-guest-event form validation and reset on clicking close.

--- a/browser/js/common/directives/attendee-event/attendee-event.html
+++ b/browser/js/common/directives/attendee-event/attendee-event.html
@@ -13,5 +13,5 @@
 </section>
 <section class="attendee-aeg">
     <event-guest ng-repeat="guest in guests" attendee="attendee" guest="guest" evtid="{{evt.$id}}"></event-guest>
-    <add-event-guest ng-show="viewAddGuestForm" attendee="attendee" evt="evt" available="available"></add-event-guest>
+    <add-event-guest ng-show="viewAddGuestForm" attendee="attendee" evt="evt" available="available" formreset="viewAddGuestForm" ng-cloak></add-event-guest>
 </section>
