--- a/browser/js/common/directives/header-bar/header-bar.html
+++ b/browser/js/common/directives/header-bar/header-bar.html
@@ -2,7 +2,7 @@
   <div class="header-item-menu">
     <button class="sqn-btn-header" ui-sref="home">Home</button>
   </div>
-  <div ng-hide="currentUser" class="header-item-user">
+  <div ng-hide="currentUser" class="header-item-user" ng-cloak>
     <button class="sqn-btn-header" ui-sref="newAttendee">Register</button>
     <button class="sqn-btn-header" ui-sref="login">Login</button>
   </div>
