--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -1,8 +1,10 @@
 <section id="user-profile" class="container-fluid">
   <div class="row">
-    <h2>Hi {{ user.firstName }}</h2>
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <h2>Hi {{ user.firstName }}</h2>
       <p>{{ userCat }}</p>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <h3>Anniversary Events </h3>
       <attendee-event ng-repeat="event in events" evt="event" attendee="user"></attendee-event>
     </div>
