--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -1,12 +1,89 @@
 <section id="user-profile" class="container-fluid">
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="flex-container-row attendee-header">
       <h2>Hi {{ user.firstName }}</h2>
-      <p>{{ userCat }}</p>
+      <span>{{ userCat }}</span>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <h3>Anniversary Events </h3>
+      <h3>Manage your events</h3>
       <attendee-event ng-repeat="event in events" evt="event" attendee="user"></attendee-event>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 attendee-announcements">
+      <h3>Event Announcements</h3>
+      <div class="announcement-viewer">
+        <article>
+          <header class="flex-container-row">
+            <h4>Article Title</h4>
+            <span>12 Sep 2016</span>
+          </header>
+          <p>Article article...</p>
+          <footer></footer>
+        </article>
+        <article>
+          <header class="flex-container-row">
+            <h4>Article Title</h4>
+            <span>12 Sep 2016</span>
+          </header>
+          <p>Article article...</p>
+          <footer></footer>
+        </article>
+        <article>
+          <header class="flex-container-row">
+            <h4>Article Title</h4>
+            <span>12 Sep 2016</span>
+          </header>
+          <p>Article article...</p>
+          <footer></footer>
+        </article>
+        <article>
+          <header class="flex-container-row">
+            <h4>Article Title</h4>
+            <span>12 Sep 2016</span>
+          </header>
+          <p>Article article...</p>
+          <footer></footer>
+        </article>
+        <article>
+          <header class="flex-container-row">
+            <h4>Article Title</h4>
+            <span>12 Sep 2016</span>
+          </header>
+          <p>Article article...</p>
+          <footer></footer>
+        </article>
+        <article>
+          <header class="flex-container-row">
+            <h4>Article Title</h4>
+            <span>12 Sep 2016</span>
+          </header>
+          <p>Article article...</p>
+          <footer></footer>
+        </article>
+        <article>
+          <header class="flex-container-row">
+            <h4>Article Title</h4>
+            <span>12 Sep 2016</span>
+          </header>
+          <p>Article article...</p>
+          <footer></footer>
+        </article>
+        <article>
+          <header class="flex-container-row">
+            <h4>Article Title</h4>
+            <span>12 Sep 2016</span>
+          </header>
+          <p>Article article...</p>
+          <footer></footer>
+        </article>
+        <article>
+          <header class="flex-container-row">
+            <h4>Article Title</h4>
+            <span>12 Sep 2016</span>
+          </header>
+          <p>Article article...</p>
+          <footer></footer>
+        </article>
+      </div>
     </div>
   </div>
 </section>
