--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -6,7 +6,9 @@
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <h3>Manage your events</h3>
-      <attendee-event ng-repeat="event in events" evt="event" attendee="user"></attendee-event>
+      <div class="attendee-event-viewer">
+        <attendee-event ng-repeat="event in events" evt="event" attendee="user"></attendee-event>
+      </div>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 attendee-announcements">
       <h3>Event Announcements</h3>
