--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -1,7 +1,7 @@
 <section id="user-profile" class="container-fluid">
   <div class="row">
     <div class="flex-container-row attendee-header">
-      <h2>Hi {{ user.firstName }}</h2>
+      <h2>Welcome back {{ user.firstName }}</h2>
       <span>{{ userCat }}</span>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
