Working on styling events management substate of the management state. Also working on conversions and editing.

--- a/browser/js/management/management-events.html
+++ b/browser/js/management/management-events.html
@@ -1,5 +1,5 @@
 <section id="management-events" class="management-sub-menu">
-  <event-modification ng-repeat="evt in allEvents" evt="evt" categories="cats">
+  <event-modification class="col-xs-12 col-sm-12 col-md-6 col-lg-6" ng-repeat="evt in allEvents" evt="evt" categories="cats">
   </event-modification>
 
 </section>
