--- a/browser/js/management/management.html
+++ b/browser/js/management/management.html
@@ -1,11 +1,11 @@
-<section id="management-panel">
+<section id="management-panel" class="container">
 
-  <h2>What do you need to do today?</h2>
+  <h2>Hi {{ currentUser.firstName }}, what do you need to do today?</h2>
   <p ng-repeat="evt in allEvents">There are {{ evt.guests }} amount of people attending {{ evt.name }}<p>
   <div class="flex-container-row">
     <button class="sqn-btn sqn-btn-flex" ui-sref-active="sqn-btn-active" ng-repeat="managementView in areasToManage" ui-sref="{{ managementView.state }}">{{ managementView.title }}</button>
   </div>
-  <div ui-view>
+  <div class="row" ui-view>
     <!--  ui-view will render substates in here. Negates requirement for reloading the page. -->
   </div>
   <div>
