--- a/browser/js/common/directives/event-modification/event-modification.html
+++ b/browser/js/common/directives/event-modification/event-modification.html
@@ -1,13 +1,16 @@
 <article>
   <header>
     <h4>{{ evt.name }}</h4>
-    <button class="sqn-btn-danger" ng-click="removeEvent(evt)">Delete</button>
-    <button class="sqn-btn" ng-click="toggleEditMode()">{{ editOption }}</button>
-    <button class="sqn-btn" ng-click="toggleGuestLimits()">{{ guestLimits.buttonText }} Guest Limits</button>
+      <div class="event-option-container">
+        <button class="sqn-btn-danger" ng-click="removeEvent(evt)">Delete</button>
+        <button class="sqn-btn" ng-click="toggleEditMode()">{{ editOption }}</button>
+        <button class="sqn-btn" ng-click="toggleGuestLimits()">{{ guestLimits.buttonText }} Guest Limits</button>
+      </div>
   </header>
-  <div>
-    <p> {{ displayDate }} | {{ displayTime }}</p>
+  <div class="event-details-container">
+    <p> {{ displayDate }} | Start Time:  {{ displayTime }}</p>
     <p>{{ evt.location }}</p>
+    <p>Event Details...</p>
   </div>
   <div>
     <event-guest-limit ng-show="guestLimits.displayMenu" evt=evt cats="categories"></event-guest-limit>
@@ -17,7 +20,7 @@
       <label>Name</label>
       <input class="sqnInput sqnInputActive" type="text" ng-model="modifiedEntry.name"></input>
       <label>Date</label>
-      <input type="date" ng-model="modifiedEntry.date"></label>
+      <input class="sqnInputActive" type="date" ng-model="modifiedEntry.date"></label>
       <label>Time</label>
       <input type="time" ng-model="modifiedEntry.startTime"></input>
       <label>Location</label>
