--- a/browser/js/common/directives/event-modification/event-modification.html
+++ b/browser/js/common/directives/event-modification/event-modification.html
@@ -16,7 +16,7 @@
     <event-guest-limit ng-show="guestLimits.displayMenu" evt=evt cats="categories"></event-guest-limit>
   </div>
   <footer ng-show="editMode">
-    <form  ng-submit="updateEvent()">
+    <form  name="eventEditForm" ng-submit="updateEvent()">
       <label>Name</label>
       <input class="sqnInput sqnInputActive" type="text" ng-model="modifiedEntry.name"></input>
       <label>Date</label>
@@ -24,8 +24,8 @@
       <label>Time</label>
       <input type="time" ng-model="modifiedEntry.startTime"></input>
       <label>Location</label>
-      <input type="text" ng-model="modifiedEntry.location"></input>
-      <input type="submit" value="Update Event"></input>
+      <input class="sqnInputActive" type="text" ng-model="modifiedEntry.location"></input>
+      <input class="sqn-btn-positive" type="submit" value="Update Event"></input>
     </form>
   </footer>
 </article>
