--- a/browser/js/management/management-events.html
+++ b/browser/js/management/management-events.html
@@ -1,4 +1,8 @@
 <section id="management-events" class="management-sub-menu">
+  <div class="flex-container-row">
+    <button class="sqn-btn">Create New Event</button>
+    <button class="sqn-btn">Event Guest List</button>
+  </div>
   <event-modification class="col-xs-12 col-sm-12 col-md-6 col-lg-6" ng-repeat="evt in allEvents" evt="evt" categories="cats">
   </event-modification>
 
