--- a/browser/js/referredNewAttendee/referredNewAttendee.html
+++ b/browser/js/referredNewAttendee/referredNewAttendee.html
@@ -1,1 +1,5 @@
-<new-attendee-external-form events="events" categories="categories"></new-attendee-external-form>
+<div class="referred-attendee-container row">
+  <h3>Sorry, looks like you aren't registered yet.</h3>
+  <h3>Lets get started!</h3>
+  <new-attendee-external-form events="events" categories="categories"></new-attendee-external-form>
+</div>
