Have registration with google account working.

--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -14,9 +14,10 @@
       <img src="/images/newAttendee/fb-logo.png" alt="Register using Facebook"></img>
       <span>Facebook</span>
     </div>
-    <!-- <div ng-click="registerMethod('google')" class="button-panel google-btn">
-      G+
-    </div> -->
+    <div ng-click="registerMethod('google')" class="button-panel google-btn">
+      <img src="/images/newAttendee/gg-logo.svg" alt="Register using Google"></img>
+      <span>Google</span>
+    </div>
   </div>
   <div class="info-banner" ng-show="registerMethodChosen === null">
     <p>Registering will allow you to login and monitor any announcements regarding the event.</p>
