--- a/browser/js/common/directives/event-creation/event-creation.html
+++ b/browser/js/common/directives/event-creation/event-creation.html
@@ -5,11 +5,13 @@
   </div>
   <div class="flex-container-row">
     <label>Date</label>
-    <input class="sqnInputActive" type="date" ng-model="modifiedEntry.date"></label>
+    <div class="date-selector">
+      <button class="sqn-btn" ng-class="{'sqn-btn-positive': activeDate === date }"ng-repeat="date in validDates" ng-click="modifyDate(date)" >{{ date }}</button>
+    </div>
   </div>
   <div class="flex-container-row">
     <label>Start Time</label>
-    <div class="edit-timer-container">
+    <div class="edit-time-container">
       <input class="sqnInputNumber" type="number" ng-model="modifiedEntry.startTime.hours" placeholder="00" min="00" max="23" name="startTimeHours"></input>
       <span>:</span>
       <input class="sqnInputNumber" type="number" ng-model="modifiedEntry.startTime.minutes" placeholder="00" name="startTimeMinutes"></input>
