--- a/browser/js/common/directives/event-modification/event-modification.html
+++ b/browser/js/common/directives/event-modification/event-modification.html
@@ -8,7 +8,7 @@
       </div>
   </header>
   <div class="event-details-container">
-    <p> {{ displayDate }} | Start Time:  {{ evt.startTime.hours }}{{ evt.startTime.minutes }}</p>
+    <p> {{ evt.date }}| Start Time:  {{ evt.startTime.hours }}{{ evt.startTime.minutes }}</p>
     <p>{{ evt.location }}</p>
     <p>Event Details...</p>
   </div>
