Styling and new event completed. Now need to complete the conditional saving on the event creation directive.

--- a/browser/js/common/directives/event-creation/event-creation.html
+++ b/browser/js/common/directives/event-creation/event-creation.html
@@ -1,4 +1,4 @@
-<form  name="eventEditForm" ng-submit="updateEvent()">
+<form  class="event-creation-form" name="eventEditForm" ng-submit="updateEvent()">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <label>Name</label>
     <input class="sqnInput sqnInputActive" type="text" ng-model="modifiedEntry.name"></input>
