Completed resetting form on cancel of edit. Now working on Creating new event subset.

--- a/browser/js/common/directives/event-creation/event-creation.html
+++ b/browser/js/common/directives/event-creation/event-creation.html
@@ -24,5 +24,6 @@
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <input class="sqn-btn-positive" type="submit" value="Update Event"></input>
+    <button class="sqn-btn" ng-click="cancelEdit()">Cancel Edit</button>
   </div>
 </form>
