--- a/browser/js/common/directives/event-creation/event-creation.html
+++ b/browser/js/common/directives/event-creation/event-creation.html
@@ -22,8 +22,8 @@
     <label>Location</label>
     <input class="sqnInputActive" type="text" ng-model="modifiedEntry.location"></input>
   </div>
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <input class="sqn-btn-positive" type="submit" value="Update Event"></input>
-    <button class="sqn-btn" ng-click="cancelEdit()">Cancel Edit</button>
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 event-options">
+    <input class="sqn-btn-positive" type="submit" value="{{ updateLabel }}"></input>
+    <button class="sqn-btn-inverse" ng-click="cancelEdit()">Cancel Edit</button>
   </div>
 </form>
